# BphoOptics

./: .clang-tidy  CMakeLists.txt  CMakePresets.json  Dependencies.cmake  ProjectOptions.cmake  README.md
.github/: constants.env
.github/workflows/: ci.yml
cmake/: Cache.cmake  CompilerWarnings.cmake  Cuda.cmake  Doxygen.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  Tests.cmake
configured_files/: config.hpp.in
fuzz_test/: CMakeLists.txt  fuzz_tester.cpp
glsl/: newBaseVertexShader.vert.glsl  redFragmentShader.frag.glsl
include/BphoOptics/: sample_library.hpp
include/glad/: glad.h
include/renderer/colour/: colour.hpp
include/renderer/drawer/: drawer.hpp  openGlDrawer.hpp
include/renderer/error/: error.hpp
include/renderer/plot/: linePlot.hpp
include/renderer/point/: point.hpp
include/renderer/shader/: shader.hpp
include/renderer/shape/: openGLShapes.hpp  shape.hpp
include/renderer/utils/: concepts.hpp
include/renderer/vector/: vector.hpp
include/renderer/vertex/: vertexes.hpp
src/: CMakeLists.txt
src/ftxui_sample/: CMakeLists.txt  main.cpp
src/glad/: CMakeLists.txt  glad.c
src/main/: CMakeLists.txt  main.cpp
src/openGLAbstractions/: CMakeLists.txt  error.cpp
src/sample_library/: CMakeLists.txt  sample_library.cpp
test/: CMakeLists.txt  constexpr_tests.cpp  tests.cpp  vertexTests.cpp
